upd: swagger port

--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@ SERVER_ADDRESS="176.114.67.228"
 SERVER_PORT="8088"
 
 SWAGGER_VERSION="2.0"
-SWAGGER_HOST="176.114.67.228:8088"
-SWAGGER_BASE_PATH="/api"
+SWAGGER_HOST="176.114.67.228:8089"
+SWAGGER_BASE_PATH="/swagger/"
 SWAGGER_TITLE="Swagger API"
 SWAGGER_DESCRIPTION="This is a sample server celler server."
