--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,6 +31,17 @@ services:
       interval: 30s
       timeout: 10s
       retries: 3
+      
+  swagger:
+    image: swaggerapi/swagger-ui
+    ports:
+      - "8089:8080"  # Swagger UI running on port 8089
+    environment:
+      SWAGGER_JSON: /swagger.json
+    volumes:
+      - ./swagger.json:/usr/share/nginx/html/swagger.json
+    networks:
+      - dev
 
 
   db:
