--- a/nginx.conf
+++ b/nginx.conf
@@ -21,9 +21,8 @@ http {
             gzip_min_length 256;
         }
 
-        # Serve Swagger UI
-        location /api/ {
-            proxy_pass http://gin-server:8088/api/;
+        location /swagger/ {
+            proxy_pass http://swagger:8080/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
