--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,7 +37,7 @@ services:
     ports:
       - "8089:8080"  # Swagger UI running on port 8089
     environment:
-      SWAGGER_JSON=/usr/share/nginx/html/swagger.json
+      - SWAGGER_JSON=/usr/share/nginx/html/swagger.json
     volumes:
       - ./cmd/main/docs/swagger.json:/usr/share/nginx/html/swagger.json
     networks:
